examples/test/testpolicy2966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2966
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key27: value15
      key21: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value37
          key19: value14
      podSelector:
        matchLabels:
          key19: value3
          key17: value24
          key36: value32
